Initial changes for spark4